fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -38,4 +38,32 @@
   background-size: cover;
   background-color: #121212;
   background-position: 0px;
-} 
+}
+
+.primary-div {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  width: 100vw;
+  height: calc(100vh - 3.5rem);
+  z-index: 100;
+  align-items: center;
+  overflow-y: auto;
+  overflow-x: hidden;
+  bottom: 0;
+}
+
+.card {
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(30px) saturate(125%);
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  overflow: hidden;
+  width: clamp(20rem, 90vw, 30rem);
+  border-radius: 5px;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  bottom: auto;
+  position: absolute;
+}
